--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -19,6 +19,269 @@
         /*! loadCSS rel=preload polyfill. [c]2017 Filament Group, Inc. MIT License */
         !function (a) { if (a.loadCSS) { var b = loadCSS.relpreload = {}; if (b.support = function () { try { return a.document.createElement("link").relList.supports("preload") } catch (b) { return !1 } }, b.poly = function () { for (var b = a.document.getElementsByTagName("link"), c = 0; c < b.length; c++) { var d = b[c]; "preload" === d.rel && "style" === d.getAttribute("as") && (a.loadCSS(d.href, d, d.getAttribute("media")), d.rel = null) } }, !b.support()) { b.poly(); var c = a.setInterval(b.poly, 300); a.addEventListener && a.addEventListener("load", function () { b.poly(), a.clearInterval(c) }), a.attachEvent && a.attachEvent("onload", function () { a.clearInterval(c) }) } } }(this);
     </script>
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+    <style>
+        /* CUSTOMIZE THE CAROUSEL
+        -------------------------------------------------- */
+
+        /* Carousel base class */
+        .carousel {
+            height: 500px;
+            margin-bottom: 18px;
+        }
+        /* Since positioning the image, we need to help out the caption */
+        .carousel-caption {
+            z-index: 10;
+        }
+
+        /* Declare heights because of positioning of img element */
+        .carousel .item {
+            height: 500px;
+            background-color: #777;
+        }
+
+        .carousel-inner > .item > img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            height: 500px;
+        }
+
+        /* GLOBAL STYLES
+        -------------------------------------------------- */
+        /* Padding below the footer and lighter body text */
+
+
+
+
+        /* CUSTOMIZE THE NAVBAR
+        -------------------------------------------------- */
+
+        /* Special class on .container surrounding .navbar, used for positioning it into place. */
+        .navbar-wrapper {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            z-index: 20;
+        }
+
+            /* Flip around the padding for proper display in narrow viewports */
+            .navbar-wrapper > .container {
+                padding-right: 0;
+                padding-left: 0;
+            }
+
+            .navbar-wrapper .navbar {
+                padding-right: 15px;
+                padding-left: 15px;
+            }
+
+                .navbar-wrapper .navbar .container {
+                    width: auto;
+                }
+
+
+        /* CUSTOMIZE THE CAROUSEL
+        -------------------------------------------------- */
+
+        /* Carousel base class */
+        .carousel {
+            height: 500px;
+            margin-bottom: 18px;
+        }
+        /* Since positioning the image, we need to help out the caption */
+        .carousel-caption {
+            z-index: 10;
+        }
+
+        /* Declare heights because of positioning of img element */
+        .carousel .item {
+            height: 500px;
+            background-color: #777;
+        }
+
+        .carousel-inner > .item > img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            height: 500px;
+        }
+
+
+        /* MARKETING CONTENT
+        -------------------------------------------------- */
+
+        /* Center align the text within the three columns below the carousel */
+        .marketing .col-lg-4 {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .marketing h2 {
+            font-weight: normal;
+        }
+
+        .marketing .col-lg-4 p {
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+
+
+        /* Featurettes
+        ------------------------- */
+
+        .featurette-divider {
+            margin: 80px 0; /* Space out the Bootstrap <hr> more */
+        }
+
+        /* Thin out the marketing headings */
+        .featurette-heading {
+            font-weight: 300;
+            line-height: .5em;
+            letter-spacing: -1px;
+        }
+
+
+        /* RESPONSIVE CSS
+        -------------------------------------------------- */
+
+        @media (min-width: 768px) {
+            /* Navbar positioning foo */
+            .navbar-wrapper {
+                margin-top: 20px;
+            }
+
+                .navbar-wrapper .container {
+                    padding-right: 15px;
+                    padding-left: 15px;
+                }
+
+                .navbar-wrapper .navbar {
+                    padding-right: 0;
+                    padding-left: 0;
+                }
+
+                /* The navbar becomes detached from the top, so we round the corners */
+                .navbar-wrapper .navbar {
+                    border-radius: 4px;
+                }
+
+            /* Bump up size of carousel content */
+            .carousel-caption p {
+                margin-bottom: 20px !important;
+                font-size: 21px !important;
+                line-height: 1.4 !important;
+            }
+
+            .featurette-heading {
+                font-size: 50px !important;
+                color: #333333 !important;
+                margin-bottom: 2px !important;
+                margin-top: 0px !important;
+            }
+
+            .featurette-heading2 {
+                font-size: 30px !important;
+                margin-bottom: 1px !important;
+                margin-top: 0px !important;
+            }
+
+            .lead2 p {
+                color: #333333 !important;
+                margin: 0 !important;
+                padding: 0 !important;
+                line-height: 1.7em;
+                font-weight: 500;
+            }
+
+            .lead p {
+                color: #333333 !important;
+                margin: 0 !important;
+                padding: 0 !important;
+                line-height: 1.7em;
+            }
+        }
+
+        @media (min-width: 992px) {
+            .featurette-heading {
+                margin-top: 120px;
+            }
+        }
+
+        .text-blue {
+            color: #005599 !important;
+        }
+
+        .imgright {
+            float: right;
+            /*border-radius: 15px;*/
+            border-radius: 1ex;
+        }
+    </style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic" onload="this.rel='stylesheet'">
+    <link rel="stylesheet" href="src/css/lightslider.css" />
+    <style>
+        ul {
+            list-style: none outside none;
+            padding-left: 0;
+            margin: 0;
+        }
+
+        .demo .item {
+            margin-bottom: 0px;
+            margin-top: 0px;
+        }
+
+        .content-slider li {
+            background-color: #ed3020;
+            text-align: center;
+            color: #FFF;
+        }
+
+        .content-slider h3 {
+            margin: 0;
+            padding: 70px 0;
+        }
+
+        .demo {
+            width: 800px;
+            margin-left: 80px;
+        }
+    </style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="src/js/lightslider.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#content-slider").lightSlider({
+                loop: true,
+                keyPress: true
+            });
+            $('#image-gallery').lightSlider({
+                gallery: true,
+                item: 1,
+                thumbItem: 9,
+                pause: 3000,
+                slideMargin: 0,
+                speed: 1000,
+                auto: true,
+                loop: true,
+                onSliderLoad: function () {
+                    $('#image-gallery').removeClass('cS-hidden');
+                }
+            });
+        });
+    </script>
 </head>
 
 <body>
