--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -18,7 +18,8 @@
 <link rel="stylesheet" media="all" href="css/rwf.css" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css">-->
-
+<script async src="js/jquery-2.1.1.min.js"></script>
+<script async src="js/bootstrap.min.js"></script>
 
         <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic" as="style" onload="this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic"></noscript>
