--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -30,36 +30,8 @@
     <link rel="stylesheet" href="src/css/lightslider.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="src/js/lightslider.js"></script>
-    <style>
-        ul {
-            list-style: none outside none;
-            padding-left: 0;
-            margin: 0;
-        }
-
-        .demo .item {
-            margin-bottom: 0px;
-            margin-top: 0px;
-        }
-
-        .content-slider li {
-            background-color: #ed3020;
-            text-align: center;
-            color: #FFF;
-        }
-
-        .content-slider h3 {
-            margin: 0;
-            padding: 70px 0;
-        }
-
-        .demo {
-            width: 800px;
-            margin-left: 80px;
-        }
-    </style>
-
-
+    <script src="js/about.js"></script>
+    
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic"></noscript>
     <script>
@@ -89,193 +61,6 @@
             });
         });
     </script>
-    <style>
-        /* CUSTOMIZE THE CAROUSEL
-        -------------------------------------------------- */
-
-        /* Carousel base class */
-        .carousel {
-            height: 500px;
-            margin-bottom: 18px;
-        }
-        /* Since positioning the image, we need to help out the caption */
-        .carousel-caption {
-            z-index: 10;
-        }
-
-        /* Declare heights because of positioning of img element */
-        .carousel .item {
-            height: 500px;
-            background-color: #777;
-        }
-
-        .carousel-inner > .item > img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            min-width: 100%;
-            height: 500px;
-        }
-
-        /* CUSTOMIZE THE CAROUSEL
-        -------------------------------------------------- */
-
-        /* Carousel base class */
-        .carousel {
-            height: 500px;
-            margin-bottom: 18px;
-        }
-        /* Since positioning the image, we need to help out the caption */
-        .carousel-caption {
-            z-index: 10;
-        }
-
-        /* Declare heights because of positioning of img element */
-        .carousel .item {
-            height: 500px;
-            background-color: #777;
-        }
-
-        .carousel-inner > .item > img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            min-width: 100%;
-            height: 500px;
-        }
-
-
-        /* MARKETING CONTENT
-        -------------------------------------------------- */
-
-        /* Center align the text within the three columns below the carousel */
-        .marketing .col-lg-4 {
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .marketing h2 {
-            font-weight: normal;
-        }
-
-        .marketing .col-lg-4 p {
-            margin-right: 10px;
-            margin-left: 10px;
-        }
-
-
-
-        /* RESPONSIVE CSS
-        -------------------------------------------------- */
-
-        @media (min-width: 768px) {
-            /* Navbar positioning foo */
-            .navbar-wrapper {
-                margin-top: 20px;
-            }
-
-                .navbar-wrapper .container {
-                    padding-right: 15px;
-                    padding-left: 15px;
-                }
-
-                .navbar-wrapper .navbar {
-                    padding-right: 0;
-                    padding-left: 0;
-                }
-
-                /* The navbar becomes detached from the top, so we round the corners */
-                .navbar-wrapper .navbar {
-                    border-radius: 4px;
-                }
-
-            /* Bump up size of carousel content */
-            .carousel-caption p {
-                margin-bottom: 20px !important;
-                font-size: 21px !important;
-                line-height: 1.4 !important;
-            }
-
-            /* Other CSS -------------------------------------------------- */
-
-            .featurette-heading {
-                font-size: 50px !important;
-                color: #333333 !important;
-                margin-bottom: 2px !important;
-                margin-top: 0px !important;
-            }
-
-            .featurette-heading2 {
-                font-size: 30px !important;
-                margin-bottom: 1px !important;
-                margin-top: 0px !important;
-            }
-
-            .lead2 p {
-                color: #333333 !important;
-                margin: 0 !important;
-                padding: 0 !important;
-                line-height: 1.7em;
-                font-weight: 500;
-            }
-
-            .lead p {
-                color: #333333 !important;
-                margin: 0 !important;
-                padding: 0 !important;
-                line-height: 1.7em;
-            }
-        }
-
-        @media (min-width: 992px) {
-            .featurette-heading {
-                margin-top: 120px;
-            }
-        }
-
-        .text-blue {
-            color: #005599 !important;
-        }
-
-        .imgright {
-            float: right;
-            /*border-radius: 15px;*/
-            border-radius: 1ex;
-        }
-    </style>
-    <style>
-
-        p {
-            -moz-osx-font-smoothing: grayscale;
-            -webkit-font-smoothing: antialiased !important;
-            text-rendering: optimizelegibility !important;
-            letter-spacing: .03em;
-            font-family: arial,sans-serif;
-            line-height: 170%;
-            font-size: 18px;
-            font-weight: 100;
-        }
-
-
-
-        a:link {
-            text-decoration: none;
-            color: #2c6db0;
-        }
-
-        a:visited {
-            text-decoration: none;
-            color: #2c6db0;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        a:active {
-            text-decoration: underline;
-        }
-    </style>
     <script>
         window.initializeCarousel = () => {
             $('#myCarousel').carousel({ interval: 4300 });
