--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -14,7 +14,7 @@
     <meta name="MobileOptimized" content="width" />
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link href="Blazor.Client.styles.css" rel="stylesheet" />
     <link rel="stylesheet" media="all" href="css/rwf.css" />
 
     <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css">-->
@@ -31,7 +31,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="src/js/lightslider.js"></script>
     <script src="js/about.js"></script>
-    
+
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic"></noscript>
     <script>
