--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -14,7 +14,7 @@
     <meta name="MobileOptimized" content="width" />
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="Blazor.Client.styles.css" rel="stylesheet" />
+    <link href="Client.styles.css" rel="stylesheet" />
     <link rel="stylesheet" media="all" href="css/rwf.css" />
 
     <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css">-->
